Revision history for mojo-checkbot

0.32 2011/11/21
  - Mojolicious v2.31 is bundled.
  - Improved report view not to show user info.

0.31 2011/11/19
  - Improved html validator report.

0.30 2011/11/18
  - Added html-validate option

0.29 2011/11/18
  - Mojolicious v2.27 bundled
  - Improved notifier that 401 auth also appears.

0.28 2011/11/16
  - Fixed a bug on lightbox initialization

0.27 2011/11/15
  - Added notifier feature for activate form dialog
  - Added depth option for command api 

0.26 2011/11/15
  - Reduced form dialog for deeply same forms not to appear twice

0.25 2011/11/14
  - Improved dom analizer to detect embed, frame, iframe and input for src url.
  - Fixed a bug on forms that caused dialogs to appear only once per action url.
  - Changed default ua name
  - Userinfo for authentication are limited to be used on same port.

0.24 2011/11/12
  - Fixed a bug on performance caused by sleep option

0.23 2011/11/11
  - Added form dialog allowing to crawl beyond forms.

0.22 2011/11/10
  - Mojolicious v2.25 bundled
  - Fixed a small bug that ioloop hasn't droped when queue is empty.
  - Added match-for-check and match-for-crawl option.
  - Added Authentication dialog

0.21 2011/10/27
  - Added evacuate option to set interval for temporary file output

0.20 2011/10/27
  - Fixed a bug on sleep option that hasn't block next queue propery

0.19 2011/10/27
  - Added noevacuate option
  - Improved command API

0.18 2011/10/26
  - Fixed oops on test

0.17 2011/10/26
  - Improved status filter on report
  - Reduced undef warnings on detecting lang on windows
  - URLs in stylesheets are also checked
  - Fixed a bug on resolving scheme-less url

0.16 2011/10/26
  - Improved internals
  - Improved documentation

0.15 2011/10/25
  - Reduced cache size
  - Fixed a small bug on resume
  - Reduced memory dissipation

0.14 2011/10/25
  - Fixed a bug on fetching very large report 
  - Script file is moved to mojo root
  - Mojolicious2.10 is bundled

0.13 2011/10/25