@@ -3,6 +3,7 @@ Revision history for mojo-checkbot
 0.32 2011/11/21
   - Mojolicious v2.31 is bundled.
   - Improved report view not to show user info.
+  - Improved match* options to be set multiple time
 
 0.31 2011/11/19
   - Improved html validator report.
